// Mock GPU implementation for testing without CUDA

use anyhow::Result;
use dashmap::DashMap;
use log::{debug, info, warn};
use networkgpu_proto::{DeviceInfo, DeviceStats};
use parking_lot::RwLock;
use std::collections::HashMap;
use std::sync::atomic::{AtomicU64, Ordering};
use std::sync::Arc;
use uuid::Uuid;

use crate::config::ServerConfig;
use crate::error::GPUError;
use crate::memory::MemoryManager;
use crate::stream::StreamManager;

pub type DeviceId = i32;
pub type AllocationToken = String;

#[derive(Debug)]
pub struct GPUResourceManager {
    devices: RwLock<HashMap<DeviceId, Arc<GPUDevice>>>,
    device_allocations: DashMap<AllocationToken, DeviceAllocation>,
    config: ServerConfig,
}

#[derive(Debug)]
pub struct GPUDevice {
    pub id: DeviceId,
    pub info: DeviceInfo,
    pub memory_manager: Arc<MemoryManager>,
    pub stream_manager: Arc<StreamManager>,
    pub stats: DeviceStats,
    pub allocated_memory: AtomicU64,
    pub kernel_launches: AtomicU64,
}

#[derive(Debug, Clone)]
pub struct DeviceAllocation {
    pub token: AllocationToken,
    pub device_id: DeviceId,
    pub client_id: String,
    pub memory_limit: u64,
    pub allocated_at: std::time::SystemTime,
}

impl GPUResourceManager {
    pub async fn new(config: ServerConfig) -> Result<Self, GPUError> {
        let mut devices = HashMap::new();
        
        // Create mock devices
        let device_count = if config.gpu.device_ids.is_empty() {
            2 // Mock 2 devices
        } else {
            config.gpu.device_ids.len()
        };
        
        info!("Initializing {} mock GPU devices", device_count);
        
        for device_id in 0..device_count as i32 {
            let device = Self::initialize_device(device_id, &config).await?;
            info!("Initialized mock GPU device {}: {}", device_id, device.info.name);
            devices.insert(device_id, Arc::new(device));
        }
        
        Ok(Self {
            devices: RwLock::new(devices),
            device_allocations: DashMap::new(),
            config,
        })
    }
    
    async fn initialize_device(device_id: DeviceId, config: &ServerConfig) -> Result<GPUDevice, GPUError> {
        let device_info = DeviceInfo {
            device_id,
            name: format!("Mock GPU Device {}", device_id),
            total_memory: 8 * 1024 * 1024 * 1024, // 8GB
            free_memory: 7 * 1024 * 1024 * 1024,  // 7GB free
            compute_capability_major: 8,
            compute_capability_minor: 6,
            multiprocessor_count: 80,
            max_threads_per_block: 1024,
            max_block_dim_x: 1024,
            max_block_dim_y: 1024,
            max_block_dim_z: 64,
            max_grid_dim_x: 65535,
            max_grid_dim_y: 65535,
            max_grid_dim_z: 65535,
            warp_size: 32,
            max_pitch: 2147483647,
            max_threads_per_multiprocessor: 2048,
            clock_rate: 1500000,
            texture_alignment: 512,
            concurrent_kernels: true,
            ecc_enabled: false,
            pci_bus_id: device_id,
            pci_device_id: device_id,
            uuid: Uuid::new_v4().to_string(),
        };
        
        let device_stats = DeviceStats {
            device_id,
            memory_used: 1024 * 1024 * 1024, // 1GB used
            memory_free: 7 * 1024 * 1024 * 1024,
            utilization_percent: 25.0,
            active_kernels: 0,
            total_kernel_launches: 0,
        };
        
        let memory_manager = MemoryManager::new(
            device_id,
            config.memory.pool_size_mb * 1024 * 1024,
            config.memory.alignment_bytes,
        )?;
        
        let stream_manager = StreamManager::new(
            device_id,
            config.gpu.max_streams_per_device,
        )?;
        
        Ok(GPUDevice {
            id: device_id,
            info: device_info,
            memory_manager: Arc::new(memory_manager),
            stream_manager: Arc::new(stream_manager),
            stats: device_stats,
            allocated_memory: AtomicU64::new(1024 * 1024 * 1024),
            kernel_launches: AtomicU64::new(0),
        })
    }
    
    pub fn get_device_info(&self, device_id: DeviceId) -> Result<DeviceInfo, GPUError> {
        let devices = self.devices.read();
        let device = devices.get(&device_id)
            .ok_or(GPUError::InvalidDevice(device_id))?;
        
        let mut info = device.info.clone();
        // Simulate changing free memory
        info.free_memory = device.info.free_memory.saturating_sub(
            device.allocated_memory.load(Ordering::Relaxed)
        );
        
        Ok(info)
    }
    
    pub fn list_devices(&self) -> Vec<DeviceInfo> {
        let devices = self.devices.read();
        devices.values()
            .map(|device| {
                let mut info = device.info.clone();
                info.free_memory = device.info.free_memory.saturating_sub(
                    device.allocated_memory.load(Ordering::Relaxed)
                );
                info
            })
            .collect()
    }
    
    pub fn allocate_device(
        &self,
        device_id: DeviceId,
        client_id: String,
        memory_limit: u64,
    ) -> Result<AllocationToken, GPUError> {
        let devices = self.devices.read();
        let _device = devices.get(&device_id)
            .ok_or(GPUError::InvalidDevice(device_id))?;
        
        let token = Uuid::new_v4().to_string();
        let allocation = DeviceAllocation {
            token: token.clone(),
            device_id,
            client_id,
            memory_limit,
            allocated_at: std::time::SystemTime::now(),
        };
        
        self.device_allocations.insert(token.clone(), allocation);
        debug!("Allocated device {} to client with token {}", device_id, token);
        
        Ok(token)
    }
    
    pub fn release_device(&self, token: &str) -> Result<(), GPUError> {
        if let Some((_, allocation)) = self.device_allocations.remove(token) {
            debug!("Released device {} for token {}", allocation.device_id, token);
            Ok(())
        } else {
            Err(GPUError::InternalError(format!("Invalid allocation token: {}", token)))
        }
    }
    
    pub fn get_device(&self, device_id: DeviceId) -> Result<Arc<GPUDevice>, GPUError> {
        let devices = self.devices.read();
        devices.get(&device_id)
            .cloned()
            .ok_or(GPUError::InvalidDevice(device_id))
    }
    
    pub fn get_device_stats(&self, device_id: DeviceId) -> Result<DeviceStats, GPUError> {
        let device = self.get_device(device_id)?;
        
        let used_memory = device.allocated_memory.load(Ordering::Relaxed);
        let free_memory = device.info.total_memory.saturating_sub(used_memory);
        
        Ok(DeviceStats {
            device_id,
            memory_used: used_memory,
            memory_free: free_memory,
            utilization_percent: fastrand::f64() * 100.0, // Random utilization
            active_kernels: 0,
            total_kernel_launches: device.kernel_launches.load(Ordering::Relaxed),
        })
    }
    
    pub fn device_count(&self) -> usize {
        self.devices.read().len()
    }
    
    pub fn synchronize_device(&self, device_id: DeviceId) -> Result<(), GPUError> {
        let _device = self.get_device(device_id)?;
        // Mock synchronization - just sleep briefly
        std::thread::sleep(std::time::Duration::from_millis(1));
        Ok(())
    }
}