use anyhow::Result;
use dashmap::DashMap;
use log::debug;
use networkgpu_proto::{TensorDescriptor, TensorOpType};
use std::sync::Arc;
use uuid::Uuid;

use crate::error::GPUError;
use crate::memory::{MemoryAllocation, MemoryManager};

pub type TensorId = String;

#[derive(Debug)]
pub struct TensorManager {
    device_id: i32,
    tensors: DashMap<TensorId, RemoteTensor>,
    memory_manager: Arc<MemoryManager>,
}

#[derive(Debug, Clone)]
pub struct RemoteTensor {
    pub id: TensorId,
    pub descriptor: TensorDescriptor,
    pub memory_allocation: MemoryAllocation,
    pub created_at: std::time::SystemTime,
}

#[derive(Debug, Clone)]
pub struct TensorShape {
    pub dims: Vec<i64>,
}

#[derive(Debug, Clone)]
pub enum ScalarType {
    Float32,
    Float64,
    Int32,
    Int64,
    Bool,
    UInt8,
}

impl TensorManager {
    pub fn new(
        device_id: i32,
        memory_manager: Arc<MemoryManager>,
    ) -> Self {
        Self {
            device_id,
            tensors: DashMap::new(),
            memory_manager,
        }
    }
    
    pub fn create_tensor(
        &self,
        shape: &[i64],
        dtype: &str,
        device_id: i32,
        requires_grad: bool,
        initial_data: Option<&[u8]>,
    ) -> Result<TensorId, GPUError> {
        let scalar_type = Self::parse_dtype(dtype)?;
        let size_bytes = Self::calculate_tensor_size(shape, &scalar_type);
        
        // Allocate memory for tensor
        let memory_allocation = self.memory_manager.allocate(size_bytes, device_id)?;
        
        let tensor_id = Uuid::new_v4().to_string();
        let descriptor = TensorDescriptor {
            tensor_id: tensor_id.clone(),
            shape: shape.to_vec(),
            dtype: dtype.to_string(),
            requires_grad,
            device_ptr: memory_allocation.ptr as u64,
            device_id,
            size_bytes,
            stride: Self::calculate_stride(shape),
            storage_offset: 0,
            layout: None,
        };
        
        let tensor = RemoteTensor {
            id: tensor_id.clone(),
            descriptor,
            memory_allocation,
            created_at: std::time::SystemTime::now(),
        };
        
        if let Some(data) = initial_data {
            self.memory_manager.copy_host_to_device(
                &tensor.memory_allocation.id,
                data,
                0,
            )?;
        }
        
        self.tensors.insert(tensor_id.clone(), tensor);
        debug!("Created tensor {} with shape {:?}", tensor_id, shape);
        
        Ok(tensor_id)
    }
    
    pub fn destroy_tensor(&self, tensor_id: &str) -> Result<(), GPUError> {
        if let Some((_, tensor)) = self.tensors.remove(tensor_id) {
            self.memory_manager.deallocate(&tensor.memory_allocation.id)?;
            debug!("Destroyed tensor {}", tensor_id);
            Ok(())
        } else {
            Err(GPUError::InvalidTensorId(tensor_id.to_string()))
        }
    }
    
    pub fn get_tensor(&self, tensor_id: &str) -> Result<RemoteTensor, GPUError> {
        self.tensors.get(tensor_id)
            .map(|entry| entry.value().clone())
            .ok_or_else(|| GPUError::InvalidTensorId(tensor_id.to_string()))
    }
    
    pub fn get_tensor_data(
        &self,
        tensor_id: &str,
        offset: u64,
        size: u64,
    ) -> Result<Vec<u8>, GPUError> {
        let tensor = self.get_tensor(tensor_id)?;
        
        if offset + size > tensor.descriptor.size_bytes {
            return Err(GPUError::TensorOperationFailed(
                "Requested size exceeds tensor size".to_string()
            ));
        }
        
        self.memory_manager.copy_device_to_host(
            &tensor.memory_allocation.id,
            offset,
            size,
        )
    }
    
    pub fn set_tensor_data(
        &self,
        tensor_id: &str,
        data: &[u8],
        offset: u64,
    ) -> Result<(), GPUError> {
        let tensor = self.get_tensor(tensor_id)?;
        
        if offset + data.len() as u64 > tensor.descriptor.size_bytes {
            return Err(GPUError::TensorOperationFailed(
                "Data size exceeds tensor size".to_string()
            ));
        }
        
        self.memory_manager.copy_host_to_device(
            &tensor.memory_allocation.id,
            data,
            offset,
        )
    }
    
    pub fn tensor_operation(
        &self,
        op_type: TensorOpType,
        input_tensors: &[String],
        output_tensor: &str,
        parameters: &std::collections::HashMap<String, String>,
    ) -> Result<(), GPUError> {
        let inputs: Result<Vec<_>, _> = input_tensors
            .iter()
            .map(|id| self.get_tensor(id))
            .collect();
        let inputs = inputs?;
        
        let output = self.get_tensor(output_tensor)?;
        
        // Execute the operation based on type
        match op_type {
            TensorOpType::TensorOpAdd => self.tensor_add(&inputs, &output)?,
            TensorOpType::TensorOpSub => self.tensor_sub(&inputs, &output)?,
            TensorOpType::TensorOpMul => self.tensor_mul(&inputs, &output)?,
            TensorOpType::TensorOpDiv => self.tensor_div(&inputs, &output)?,
            TensorOpType::TensorOpMatmul => self.tensor_matmul(&inputs, &output)?,
            TensorOpType::TensorOpTranspose => self.tensor_transpose(&inputs[0], &output, parameters)?,
            TensorOpType::TensorOpReshape => self.tensor_reshape(&inputs[0], &output, parameters)?,
            TensorOpType::TensorOpReduceSum => self.tensor_reduce_sum(&inputs[0], &output, parameters)?,
            TensorOpType::TensorOpSigmoid => self.tensor_sigmoid(&inputs[0], &output)?,
            TensorOpType::TensorOpRelu => self.tensor_relu(&inputs[0], &output)?,
            _ => return Err(GPUError::TensorOperationFailed(
                format!("Unsupported operation: {:?}", op_type)
            )),
        }
        
        Ok(())
    }
    
    fn tensor_add(&self, inputs: &[RemoteTensor], _output: &RemoteTensor) -> Result<(), GPUError> {
        if inputs.len() != 2 {
            return Err(GPUError::TensorOperationFailed(
                "Add operation requires exactly 2 input tensors".to_string()
            ));
        }
        
        debug!("Executing tensor add operation");
        
        // 1. Compiling a CUDA kernel for element-wise addition
        // 2. Setting up grid and block dimensions
        // 3. Launching the kernel with input and output pointers
        
        Ok(())
    }
    
    fn tensor_sub(&self, inputs: &[RemoteTensor], _output: &RemoteTensor) -> Result<(), GPUError> {
        if inputs.len() != 2 {
            return Err(GPUError::TensorOperationFailed(
                "Sub operation requires exactly 2 input tensors".to_string()
            ));
        }
        
        debug!("Executing tensor sub operation");
        Ok(())
    }
    
    fn tensor_mul(&self, inputs: &[RemoteTensor], _output: &RemoteTensor) -> Result<(), GPUError> {
        if inputs.len() != 2 {
            return Err(GPUError::TensorOperationFailed(
                "Mul operation requires exactly 2 input tensors".to_string()
            ));
        }
        
        debug!("Executing tensor mul operation");
        Ok(())
    }
    
    fn tensor_div(&self, inputs: &[RemoteTensor], _output: &RemoteTensor) -> Result<(), GPUError> {
        if inputs.len() != 2 {
            return Err(GPUError::TensorOperationFailed(
                "Div operation requires exactly 2 input tensors".to_string()
            ));
        }
        
        debug!("Executing tensor div operation");
        Ok(())
    }
    
    fn tensor_matmul(&self, inputs: &[RemoteTensor], _output: &RemoteTensor) -> Result<(), GPUError> {
        if inputs.len() != 2 {
            return Err(GPUError::TensorOperationFailed(
                "Matmul operation requires exactly 2 input tensors".to_string()
            ));
        }
        
        debug!("Executing tensor matmul operation");
        Ok(())
    }
    
    fn tensor_transpose(
        &self,
        _input: &RemoteTensor,
        _output: &RemoteTensor,
        _parameters: &std::collections::HashMap<String, String>,
    ) -> Result<(), GPUError> {
        debug!("Executing tensor transpose operation");
        Ok(())
    }
    
    fn tensor_reshape(
        &self,
        _input: &RemoteTensor,
        _output: &RemoteTensor,
        _parameters: &std::collections::HashMap<String, String>,
    ) -> Result<(), GPUError> {
        debug!("Executing tensor reshape operation");
        Ok(())
    }
    
    fn tensor_reduce_sum(
        &self,
        _input: &RemoteTensor,
        _output: &RemoteTensor,
        _parameters: &std::collections::HashMap<String, String>,
    ) -> Result<(), GPUError> {
        debug!("Executing tensor reduce_sum operation");
        Ok(())
    }
    
    fn tensor_sigmoid(&self, _input: &RemoteTensor, _output: &RemoteTensor) -> Result<(), GPUError> {
        debug!("Executing tensor sigmoid operation");
        Ok(())
    }
    
    fn tensor_relu(&self, _input: &RemoteTensor, _output: &RemoteTensor) -> Result<(), GPUError> {
        debug!("Executing tensor relu operation");
        Ok(())
    }
    
    fn parse_dtype(dtype: &str) -> Result<ScalarType, GPUError> {
        match dtype.to_lowercase().as_str() {
            "float32" | "f32" => Ok(ScalarType::Float32),
            "float64" | "f64" => Ok(ScalarType::Float64),
            "int32" | "i32" => Ok(ScalarType::Int32),
            "int64" | "i64" => Ok(ScalarType::Int64),
            "bool" => Ok(ScalarType::Bool),
            "uint8" | "u8" => Ok(ScalarType::UInt8),
            _ => Err(GPUError::TensorOperationFailed(
                format!("Unsupported dtype: {}", dtype)
            )),
        }
    }
    
    fn calculate_tensor_size(shape: &[i64], scalar_type: &ScalarType) -> u64 {
        let element_count: i64 = shape.iter().product();
        let element_size = match scalar_type {
            ScalarType::Float32 => 4,
            ScalarType::Float64 => 8,
            ScalarType::Int32 => 4,
            ScalarType::Int64 => 8,
            ScalarType::Bool => 1,
            ScalarType::UInt8 => 1,
        };
        (element_count * element_size) as u64
    }
    
    fn calculate_stride(shape: &[i64]) -> Vec<i64> {
        let mut stride = vec![1; shape.len()];
        for i in (0..shape.len().saturating_sub(1)).rev() {
            stride[i] = stride[i + 1] * shape[i + 1];
        }
        stride
    }
    
    pub fn tensor_count(&self) -> usize {
        self.tensors.len()
    }
}